// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`avt to internal convertExpressionToInternal Apply 1`] = `
Array [
  "#Supplier-displayFactSheet?Supplier={SUP}",
  Object {
    "$LabeledElement": Object {
      "$Path": "SupplierEvalResponse",
      "type": "Path",
    },
    "$Name": "RSP",
    "type": "LabeledElement",
  },
]
`;

exports[`avt to internal convertExpressionToInternal Apply 2`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Array [
      "#Supplier-displayFactSheet?Supplier={SUP}",
      Object {
        "$LabeledElement": Object {
          "$Path": "SupplierEvalResponse",
          "type": "Path",
        },
        "$Name": "RSP",
        "type": "LabeledElement",
      },
    ],
  ],
  "name": "Annotation",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Collection 1`] = `
Object {
  "attributes": Object {},
  "content": Array [],
  "name": "Collection",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Collection 2`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Object {
      "attributes": Object {},
      "content": Array [],
      "name": "Collection",
      "type": "element",
    },
  ],
  "name": "Annotation",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Collection with string values 1`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Object {
      "attributes": Object {},
      "content": Array [
        Object {
          "text": "test",
          "type": "text",
        },
      ],
      "name": "String",
      "type": "element",
    },
  ],
  "name": "Collection",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Collection with string values 2`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Object {
      "attributes": Object {},
      "content": Array [
        Object {
          "attributes": Object {},
          "content": Array [
            Object {
              "text": "test",
              "type": "text",
            },
          ],
          "name": "String",
          "type": "element",
        },
      ],
      "name": "Collection",
      "type": "element",
    },
  ],
  "name": "Annotation",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal If 1`] = `
Object {
  "attributes": Object {},
  "content": Array [],
  "name": "If",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal If 2`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Object {
      "attributes": Object {},
      "content": Array [],
      "name": "If",
      "type": "element",
    },
  ],
  "name": "Annotation",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Null 1`] = `
Object {
  "attributes": Object {},
  "content": Array [],
  "name": "Null",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Null 2`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Object {
      "attributes": Object {},
      "content": Array [],
      "name": "Null",
      "type": "element",
    },
  ],
  "name": "Annotation",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Path 1`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Object {
      "text": "test_path",
      "type": "text",
    },
  ],
  "name": "Path",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Path 2`] = `
Object {
  "attributes": Object {
    "Path": Object {
      "name": "Path",
      "type": "attribute",
      "value": "test_path",
    },
  },
  "content": Array [],
  "name": "Annotation",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Record 1`] = `
Object {
  "attributes": Object {
    "Type": Object {
      "name": "Type",
      "type": "attribute",
      "value": "UI.DataField",
    },
  },
  "content": Array [],
  "name": "Record",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Record 2`] = `
Object {
  "attributes": Object {},
  "content": Array [
    Object {
      "attributes": Object {
        "Type": Object {
          "name": "Type",
          "type": "attribute",
          "value": "UI.DataField",
        },
      },
      "content": Array [],
      "name": "Record",
      "type": "element",
    },
  ],
  "name": "Annotation",
  "type": "element",
}
`;

exports[`avt to internal convertExpressionToInternal Unknown 1`] = `undefined`;

exports[`avt to internal convertExpressionToInternal Unknown 2`] = `undefined`;
